--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 <head>
-<title>：ホームページのタイトル</title>
+<meta charset="UTF-8">
+<title>タイトルです</title>
+<meta name="viewport" content="width=device-width,
+ initial-scale=1.0,user-scalable=yes" />
 </head>
 <body>
 <br>
@@ -23,6 +27,6 @@
 
 
 
-　　　　　　　　　　　　　　　　　　　　　　　　　　　　ここに来る前のものに近づいていますか？
+<p><font size="5">ここに来る前のものに近づいていますか？</font></p>
 </body>
 </html>
